--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -6,16 +6,28 @@
     xmlns:local="clr-namespace:King_Colin"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="King Colin"
-    Width="800"
-    Height="1000"
+    Width="1920"
+    Height="1080"
+    AllowsTransparency="True"
+    FocusManager.FocusedElement="{Binding ElementName=cv_Jeux}"
     Loaded="MainWindow_Loaded"
     WindowStartupLocation="CenterScreen"
+    WindowState="Maximized"
+    WindowStyle="None"
     mc:Ignorable="d">
-    <Canvas Name="cv_Jeux">
+    <Window.Background>
+        <SolidColorBrush Opacity="0" />
+    </Window.Background>
+    <Canvas
+        Name="cv_Jeux"
+        Margin="556,0,0,0"
+        HorizontalAlignment="Left">
         <Rectangle
             Name="FondEcran"
             Width="800"
-            Height="984" />
+            Height="1080"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top" />
         <Rectangle
             Name="plateforme1"
             Canvas.Left="135"
@@ -24,8 +36,7 @@
             Height="25"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
-            Fill="White"
-            Stroke="Black" />
+            Fill="Purple" />
         <Rectangle
             Name="plateforme2"
             Canvas.Left="135"
@@ -34,8 +45,7 @@
             Height="25"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
-            Fill="White"
-            Stroke="Black" />
+            Fill="Purple" />
         <Rectangle
             Name="plateforme3"
             Canvas.Left="135"
@@ -44,8 +54,7 @@
             Height="24"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
-            Fill="White"
-            Stroke="Black" />
+            Fill="Purple" />
         <Rectangle
             Name="plateforme4"
             Canvas.Left="135"
@@ -54,8 +63,7 @@
             Height="24"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
-            Fill="White"
-            Stroke="Black" />
+            Fill="Purple" />
         <Rectangle
             Name="plateforme5"
             Canvas.Left="348"
@@ -64,31 +72,7 @@
             Height="24"
             HorizontalAlignment="Left"
             VerticalAlignment="Center"
-            Fill="White"
-            Stroke="Black" />
-        <Rectangle
-            x:Name="joueur1"
-            Canvas.Left="148"
-            Canvas.Top="808"
-            Width="40"
-            Height="40"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Fill="Red" />
-        <Rectangle
-            x:Name="princesse"
-            Canvas.Left="380"
-            Canvas.Top="204"
-            Width="40"
-            Height="40"
-            Fill="Pink" />
-        <Rectangle
-            x:Name="donkeykong"
-            Canvas.Left="179"
-            Canvas.Top="268"
-            Width="78"
-            Height="78"
-            Fill="Green" />
+            Fill="Purple" />
         <Rectangle
             x:Name="echelle5"
             Canvas.Left="323"
@@ -103,9 +87,9 @@
             Canvas.Left="603"
             Canvas.Top="682"
             Width="25"
-            Height="166"
+            Height="165"
             HorizontalAlignment="Center"
-            VerticalAlignment="Top"
+            VerticalAlignment="Center"
             Fill="blue" />
         <Rectangle
             x:Name="echelle2"
@@ -146,9 +130,11 @@
         <Rectangle
             x:Name="ennemi1"
             Canvas.Left="526"
-            Canvas.Top="814"
+            Canvas.Top="813"
             Width="34"
             Height="34"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
             Fill="Orange" />
         <Rectangle
             x:Name="ennemi2"
@@ -168,5 +154,28 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Fill="Orange" />
+        <Rectangle
+            x:Name="joueur1"
+            Canvas.Left="155"
+            Canvas.Top="797"
+            Width="33"
+            Height="50"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Fill="Red" />
+        <Rectangle
+            x:Name="princesse"
+            Canvas.Left="378"
+            Canvas.Top="188"
+            Width="44"
+            Height="56"
+            Fill="Pink" />
+        <Rectangle
+            x:Name="donkeykong"
+            Canvas.Left="155"
+            Canvas.Top="218"
+            Width="108"
+            Height="128"
+            Fill="Green" />
     </Canvas>
 </Window>
