modif perso taille

--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -30,36 +30,32 @@
             VerticalAlignment="Top" />
         <Rectangle
             Name="plateforme1"
-            Canvas.Left="135"
             Canvas.Top="847"
-            Width="530"
+            Width="800"
             Height="25"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
             Fill="Purple" />
         <Rectangle
             Name="plateforme2"
-            Canvas.Left="135"
-            Canvas.Top="682"
-            Width="530"
+            Canvas.Top="687"
+            Width="800"
             Height="25"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
             Fill="Purple" />
         <Rectangle
             Name="plateforme3"
-            Canvas.Left="135"
-            Canvas.Top="508"
-            Width="530"
+            Canvas.Top="527"
+            Width="800"
             Height="24"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
             Fill="Purple" />
         <Rectangle
             Name="plateforme4"
-            Canvas.Left="135"
-            Canvas.Top="346"
-            Width="530"
+            Canvas.Top="367"
+            Width="800"
             Height="24"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
@@ -67,8 +63,8 @@
         <Rectangle
             Name="plateforme5"
             Canvas.Left="348"
-            Canvas.Top="244"
-            Width="250"
+            Canvas.Top="207"
+            Width="350"
             Height="24"
             HorizontalAlignment="Left"
             VerticalAlignment="Center"
@@ -76,104 +72,122 @@
         <Rectangle
             x:Name="echelle5"
             Canvas.Left="323"
-            Canvas.Top="186"
+            Canvas.Top="147"
             Width="25"
-            Height="160"
+            Height="220             "
             HorizontalAlignment="Center"
-            VerticalAlignment="Center"
+            VerticalAlignment="Top"
             Fill="blue" />
         <Rectangle
             x:Name="echelle1"
-            Canvas.Left="603"
-            Canvas.Top="682"
-            Width="25"
-            Height="165"
+            Canvas.Left="589"
+            Canvas.Top="687"
+            Width="26"
+            Height="160"
             HorizontalAlignment="Center"
-            VerticalAlignment="Center"
+            VerticalAlignment="Top"
             Fill="blue" />
         <Rectangle
             x:Name="echelle2"
-            Canvas.Left="163"
-            Canvas.Top="508"
-            Width="25"
-            Height="174"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
+            Canvas.Left="196"
+            Canvas.Top="527"
+            Width="26"
+            Height="160"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
             Fill="blue" />
         <Rectangle
             x:Name="echelle3"
-            Canvas.Left="603"
-            Canvas.Top="346"
+            Canvas.Left="711"
+            Canvas.Top="367"
             Width="25"
-            Height="162"
-            HorizontalAlignment="Center"
+            Height="160"
+            HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Fill="blue" />
         <Rectangle
             x:Name="echelle4"
-            Canvas.Left="547"
-            Canvas.Top="244"
+            Canvas.Left="629"
+            Canvas.Top="207"
             Width="25"
-            Height="104"
-            HorizontalAlignment="Center"
+            Height="160"
+            HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Fill="blue" />
         <Rectangle
             x:Name="echelle6"
-            Canvas.Left="275"
-            Canvas.Top="186"
+            Canvas.Left="277"
+            Canvas.Top="147"
             Width="25"
-            Height="160"
+            Height="220"
             HorizontalAlignment="Left"
-            VerticalAlignment="Center"
+            VerticalAlignment="Top"
+            Fill="blue" />
+        <Rectangle
+            x:Name="echelle7"
+            Canvas.Left="366"
+            Canvas.Top="687"
+            Width="26"
+            Height="60"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Fill="blue" />
+        <Rectangle
+            x:Name="echelle8"
+            Canvas.Left="366"
+            Canvas.Top="797"
+            Width="26"
+            Height="50"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
             Fill="blue" />
         <Rectangle
             x:Name="ennemi1"
-            Canvas.Left="526"
-            Canvas.Top="813"
-            Width="34"
-            Height="34"
-            HorizontalAlignment="Center"
+            Canvas.Left="534"
+            Canvas.Top="797"
+            Width="50"
+            Height="50"
+            HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Fill="Orange" />
         <Rectangle
             x:Name="ennemi2"
-            Canvas.Left="237"
-            Canvas.Top="648"
-            Width="34"
-            Height="34"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
+            Canvas.Left="238"
+            Canvas.Top="637"
+            Width="50"
+            Height="50"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
             Fill="Orange" />
         <Rectangle
             x:Name="ennemi3"
-            Canvas.Left="426"
-            Canvas.Top="474"
-            Width="34"
-            Height="34"
-            HorizontalAlignment="Left"
+            Canvas.Left="455"
+            Canvas.Top="477"
+            Width="50"
+            Height="50"
+            HorizontalAlignment="Center"
             VerticalAlignment="Top"
             Fill="Orange" />
         <Rectangle
             x:Name="joueur1"
             Canvas.Left="155"
-            Canvas.Top="797"
-            Width="33"
-            Height="50"
-            HorizontalAlignment="Left"
+            Canvas.Top="787"
+            Width="43"
+            Height="60"
+            HorizontalAlignment="Center"
             VerticalAlignment="Top"
             Fill="Red" />
         <Rectangle
             x:Name="princesse"
-            Canvas.Left="378"
-            Canvas.Top="188"
-            Width="44"
-            Height="56"
-            Fill="Pink" />
+            Canvas.Left="400"
+            Canvas.Top="141"
+            Width="54"
+            Height="66"
+            Fill="Pink" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Rectangle
             x:Name="donkeykong"
-            Canvas.Left="155"
-            Canvas.Top="218"
+            Canvas.Left="136"
+            Canvas.Top="239"
             Width="108"
             Height="128"
             Fill="Green" />
