--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -33,7 +33,23 @@
                     Height="380"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top" />
-                <Rectangle x:Name="portal" />
+                <Rectangle
+                    x:Name="Portail"
+                    Canvas.Top="255"
+                    Width="125"
+                    Height="125"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    RenderTransformOrigin="0.5,0.5">
+                    <Rectangle.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform />
+                            <SkewTransform />
+                            <RotateTransform Angle="180.381" />
+                            <TranslateTransform />
+                        </TransformGroup>
+                    </Rectangle.RenderTransform>
+                </Rectangle>
             </Canvas>
             <Canvas
                 Name="cv_Jeux"
