--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -21,17 +21,17 @@
     <Grid>
         <Canvas x:Name="cv_Global">
             <Canvas
-                Canvas.Left="180"
-                Canvas.Top="467"
-                Width="380"
-                Height="380"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Top">
+                Canvas.Left="160"
+                Canvas.Top="447"
+                Width="400"
+                Height="400"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center">
                 <Rectangle
                     x:Name="Salle_Secret"
-                    Width="380"
-                    Height="380"
-                    HorizontalAlignment="Center"
+                    Width="400"
+                    Height="400"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Top" />
                 <Rectangle
                     x:Name="Portail"
