--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -23,26 +23,28 @@
             <Canvas
                 x:Name="cv_Secrette"
                 Canvas.Left="160"
-                Canvas.Top="447"
+                Canvas.Top="456"
                 Width="400"
                 Height="400"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                Visibility="Hidden">
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top"
+                Visibility="Visible">
                 <Rectangle
                     x:Name="rect_Salle_Secret"
                     Width="400"
                     Height="400"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top" />
+                <Image Height="400" Source="/Img/Element/salleSecrette.jpg" Stretch="Fill" Width="400"/>
+                <Rectangle Height="8" Width="400" HorizontalAlignment="Center" Canvas.Top="392" VerticalAlignment="Top"/>
                 <Rectangle
                     x:Name="rect_Portail"
-                    Canvas.Top="255"
+                    Canvas.Top="266"
                     Width="125"
                     Height="125"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
-                    RenderTransformOrigin="0.5,0.5">
+                    RenderTransformOrigin="0.5,0.5" Canvas.Left="17">
                     <Rectangle.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform />
