--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -28,7 +28,7 @@
                 Height="400"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
-                Visibility="Visible">
+                Visibility="Hidden">
                 <Rectangle
                     x:Name="rect_Salle_Secrete"
                     Width="400"
@@ -282,12 +282,12 @@
                     Fill="Black" />
                 <Rectangle
                     x:Name="rect_joueur1"
-                    Canvas.Left="49"
-                    Canvas.Top="787"
-                    Width="47"
-                    Height="60"
+                    Canvas.Left="51"
+                    Canvas.Top="775"
+                    Width="45"
+                    Height="72"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
+                    VerticalAlignment="Top"
                     Fill="Red" />
                 <Rectangle
                     x:Name="rect_princesse"
